--- a/index.css
+++ b/index.css
@@ -1,64 +1,44 @@
-* {
-  box-sizing: border-box;
+*{
+    box-sizing: border-box;
+}
+header{
+    background-color: rgb(169, 169, 169);
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+article{
+    float: left;
+    padding: 20px;
+    width: 80%;
+    background-color: wheat;
 }
 
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
+footer{
+    background-color:rgb(169, 169, 169);
+    padding: 10px;
+    text-align: center;
+    color: white;
 }
 
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 20%;
-  height: 500px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
+section::after{
+    content: "";
+    display: table;
+    clear: both;
 }
 
-/* Style the list inside the menu */
-nav ul li {
-  list-style-type: none;
-  padding: 0;
-  margin: 8px;
+nav{
+    float: left;
+    width: 20%;
+    height: 500px;
+    padding: 20px;
+    background-color: rgb(230, 229, 229);
 }
 
-article {
-  float: left;
-  padding: 20px;
-  width: 80%;
-  background-color: #f1f1f1;
-  height: 500px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav,
-  article {
-    width: 100%;
-    height: auto;
-  }
+nav ul li{
+    list-style-type: none;
+    padding: 0;
+    margin: 8px;
 }
